--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "parcel index.html"
+    "start": "parcel index.html"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
     "parcel-bundler": "^1.12.4"
   }
 }
