--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jonfreihofer/coffee-info-sheet#readme",
   "dependencies": {
+    "data": "^0.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
