--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,11 +14,13 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
+  
     "import/prefer-default-export": "off",
     "prefer-default-export": [0],
     "prettier/prettier": "warn",
     "react/jsx-one-expression-per-line": [0, {"allow": "none"}],
     "react/button-has-type": [0],
+    "react/prop-types": 0,
     "react/jsx-filename-extension": [
       0,
       {
