--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "jest": "^26.6.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
-  }
+  },
+  "browserslist": ["last 1 chrome versions"]
 }
