things were fixed

--- a/package.json
+++ b/package.json
@@ -42,5 +42,7 @@
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
   },
-  "browserslist": ["last 1 chrome versions"]
+  "browserslist": [
+    "last 1 chrome versions"
+  ]
 }
